# MyDjango-crm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  package-lock.json  package.json  pyproject.toml  rav.yaml  requirements.prod.txt  requirements.txt  tailwind.config.js
.github/workflows/: sync-google-contacts.yaml
mcc/: manage.py
mcc/contacts/: apps.py  models.py  services.py  signals.py  views.py
mcc/contacts/management/commands/: sync_contacts.py
mcc/contacts/migrations/: 0001_initial.py  0002_contact_last_edited_by_alter_contact_user.py  0003_contact_created_at_contact_updated_at.py  0004_contact_first_name_contact_last_name_and_more.py  0005_contact_last_sync.py
mcc/contacts/samples/: contact-data.py  other-contact-data.py
mcc/dashboard/: views.py
mcc/emmyhome/: asgi.py  settings.py  urls.py  wsgi.py
mcc/events/: apps.py  handlers.py  models.py  services.py  signals.py
mcc/events/migrations/: 0001_initial.py  0002_alter_event_type.py  0003_alter_event_type.py  0004_remove_event_timestamp_event_time.py  0005_alter_event_type.py
mcc/helpers/: mygoogler.py
mcc/mystaticfiles/custom-theme/: custom-theme.min.css
mcc/mystaticfiles/vendors/: flowbite.min.js.map  theme.min.css
mcc/templates/: dashboard.html
mcc/templates/contacts/: detail.html  list.html
mcc/templates/contacts/snippets/: contact-card.html
mcc/templates/dashboard/: base.html  main.html  nav.html  sidebar.html
