[project]
name = "mydjango-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [ "Programming Language :: Python :: 3 :: Only" ]
dependencies = [
  "django>=5.2,<6",
  "pre-commit>=4.4",
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "pip>=25.3",
]
